--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>The Burnt Letter | Full Stack Developer & AI/ML Enthusiast</title>
+    <title>Keerthi Tadikonda </title>
     <meta name="description" content="Personal portfolio of a Full Stack Developer & AI/ML Enthusiast, crafted like an aged letter with vintage aesthetics" />
     <meta name="author" content="Keerthi Tadikonda" />
 
@@ -20,6 +20,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;800&family=Lora:wght@400;500;600;700&family=Great+Vibes&family=Special+Elite&display=swap" rel="stylesheet">
+    <link rel="icon" type="image/x-icon" href="/public/favicon.ico" />
   </head>
 
   <body>
